# finalayze

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  WORKFLOW.md  docker-compose.monitoring.yml  pyproject.toml
.claude/agents/: analysis-agent.md  api-agent.md  backtest-agent.md  config-agent.md  core-agent.md  data-agent.md  evaluation-agent.md  execution-agent.md  infra-agent.md  markets-agent.md  ml-agent.md  ml-engineer.md  quant-analyst.md  risk-agent.md  risk-officer.md  strategies-agent.md  systems-architect.md
.github/workflows/: ci.yml  claude-code-review.yml
.streamlit/: config.toml  secrets.toml.example
alembic/: alembic.ini  env.py
alembic/versions/: 001_initial.py  002_news_sentiment.py  003_portfolio_snapshots.py
config/: __init__.py  logging.py  modes.py  segments.py  settings.py
config/universes/: moex_blue_chips.json  sp500_sample.json  us_losers.json  us_mega.json
docker/: Dockerfile  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.sh
docker/nginx/: nginx.conf
docs/: INDEX.md
docs/api/: ENDPOINTS.md
docs/architecture/: DATA_FLOW.md  DECISIONS.md  DEPENDENCY_LAYERS.md  OVERVIEW.md
docs/design/: MARKETS.md  ML_PIPELINE.md  NEWS_PIPELINE.md  RISK.md  SEGMENTS.md  STRATEGIES.md
docs/operations/: DEPLOYMENT.md  MONITORING.md  RUNBOOK.md
docs/plans/: 2026-02-22-phase1-backtest-slice-design.md  2026-02-22-phase1-backtest-slice-plan.md  2026-02-23-phase2-design.md  2026-02-23-phase2-track-a-intelligence.md  2026-02-23-phase2-track-b-moex.md  2026-02-23-phase3-design.md  2026-02-23-phase3-track-a-trading-loop.md  2026-02-23-phase3-track-b-ml-strategies.md  2026-02-23-phase3-track-c-e2e.md  2026-02-27-phase4-track-a-design.md  2026-02-27-phase4-track-b-design.md  2026-02-27-phase4-track-b-plan.md  2026-02-28-agents-config-design.md  2026-02-28-agents-config-plan.md  2026-03-01-improvement-plan.md  2026-03-01-phase6a-risk-compliance.md  2026-03-01-phase6b-strategy-quality.md  2026-03-01-phase6c-ml-pipeline.md  2026-03-01-phase6d-architecture-security.md  2026-03-01-phase7-evaluation-fixes.md  2026-03-02-enhanced-improvement-plan.md  2026-03-02-improvement-plan.md  2026-03-02-iteration-tracker-design.md  2026-03-02-iteration-tracker-plan.md  PHASE_1.md  ROADMAP.md
docs/quality/: GAPS.md  GRADES.md  TEST_STRATEGY.md
monitoring/: alertmanager.yml  alerts.yml  prometheus.yml
scripts/: compare_iterations.py  list_iterations.py  run_backtest.py  run_batch_backtest.py  run_batch_evaluation.py  run_comprehensive_backtest.py  run_evaluation.py  run_iteration.py  run_moex_evaluation.py  run_moex_tinkoff_eval.py  run_validation.py  seed_historical_data.py  train_models.py  train_moex_models.py
src/finalayze/: __init__.py  main.py
src/finalayze/analysis/: event_classifier.py  fact_checker.py  impact_estimator.py  llm_client.py  news_analyzer.py
src/finalayze/api/: metrics.py
src/finalayze/backtest/: __init__.py  config.py  costs.py  decision_journal.py  engine.py  iteration_tracker.py  journaling_combiner.py  monte_carlo.py  performance.py  walk_forward.py
src/finalayze/core/: alerts.py  clock.py  db.py  events.py  exceptions.py  models.py  modes.py  schemas.py  trading_loop.py
src/finalayze/dashboard/: api_client.py  app.py
src/finalayze/data/: cache.py  normalizer.py  rate_limiter.py
src/finalayze/execution/: alpaca_broker.py  broker_base.py  broker_router.py  retry.py  simulated_broker.py  tinkoff_broker.py
src/finalayze/markets/: currency.py  fx_service.py  instruments.py  registry.py  schedule.py
src/finalayze/ml/: calibration.py  integrity.py  loader.py  registry.py
src/finalayze/risk/: chandelier_exit.py  circuit_breaker.py  correlation.py  (+10 more)
tests/: conftest.py
tests/e2e/: test_circuit_breaker_e2e.py  test_paper_trading_cycle.py
tests/infra/: test_docker_compose_pinned.py  test_nginx_conf.py
tests/integration/: test_alpaca_integration.py  test_circuit_breaker_integration.py  test_news_to_signal.py  test_tinkoff_integration.py  test_trading_loop.py
tests/unit/: test_alpaca_broker.py  test_api_auth.py  test_api_health.py  test_api_portfolio.py  test_api_signals_risk.py  test_api_system.py  test_api_trades.py  test_async_helper.py  test_auth_timing_safe.py  test_backtest_config.py  test_backtest_engine.py  test_benchmark.py  test_broker.py  test_broker_router.py  test_caching_fetcher.py  test_circuit_breaker.py  test_clock.py  test_config.py  test_core.py  test_corporate_actions.py  test_correlation.py  test_cors.py  test_costs.py  test_cpcv.py  test_critical_safety.py  test_cross_market_fx.py  test_currency.py  test_dashboard_api_client.py  test_dashboard_pages.py  test_db_pool_config.py  test_decision_journal.py  test_decision_logging.py  test_dual_momentum.py  test_engine_kelly_limits.py  test_ensemble_calibrator.py  test_ensemble_with_lstm.py  test_event_classifier.py  test_event_driven_strategy.py  test_events.py  test_exceptions.py  (+93 more)
(+59 files in other folders)
